# test-cpp

cpp_testing/: README.md
cpp_testing/basic_example/: README.md  main.cpp  math_utils.cpp  math_utils.hpp  test_exe
cpp_testing/cmake_example/: CMakeLists.txt  README.md
cpp_testing/cmake_example/include/: calculator.hpp
cpp_testing/cmake_example/src/: calculator.cpp  main.cpp
cpp_testing/make_cmake_example/: CMakeLists.txt
cpp_testing/make_example/: Makefile  README.md
cpp_testing/make_example/include/: calculator.hpp
cpp_testing/make_example/src/: calculator.cpp  main.cpp
oops_concept/: FINAL_CLEAN_STATUS.md  README.md  TESTING_SUMMARY.md  final_clean_test.sh  main_guaranteed_working.cpp  main_simple_demo  main_simple_demo.cpp  master_demo  master_demo.cpp  run_interview_tests.sh  test_abstraction.cpp  test_adapter_decorator.cpp  test_all.sh  test_all_final.sh  test_basic.cpp  test_class_object.cpp  test_complete_suite.sh  test_constructor_methods  test_encapsulation.cpp  test_exception_handling.cpp  test_factory.cpp  test_inheritance.cpp  test_master_comprehensive.cpp  test_move_semantics.cpp  test_observer.cpp  test_polymorphism.cpp  test_singleton.cpp  test_smart_pointers.cpp  test_strategy.cpp  transaction_log.txt
oops_concept/advanced/: abstraction.hpp
oops_concept/basic/: class_object.hpp  encapsulation.hpp  encapsulation_new.hpp  encapsulation_old.hpp  inheritance.hpp  polymorphism.hpp
oops_concept/design_patterns/: adapter_decorator.hpp  factory.hpp  observer.hpp  singleton.hpp  strategy.hpp
oops_concept/other_concepts/: exception_handling.hpp  move_semantics.hpp  smart_pointers.hpp
